--- a/src/app/admin-dashboard/admin-navbar/admin-navbar.component.html
+++ b/src/app/admin-dashboard/admin-navbar/admin-navbar.component.html
@@ -8,7 +8,7 @@
     <a routerLink="/admin-dashboard" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }"
       class="nav-link">
       <p>
-        Dashboard
+        Tableau de bord
       </p>
     </a>
 
@@ -16,20 +16,20 @@
       class="nav-link">
       
       <p>
-        Orders
+        Ordres
       </p>
     </a>
     <a routerLink="/admin-products" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }"
       class="nav-link">
       
       <p>
-        Products
+        Produits
       </p>
     </a> <a routerLink="/contact-messages" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }"
       class="nav-link">
       
       <p>
-        Feed Back
+        Messages
       </p>
     </a>
 
@@ -38,7 +38,7 @@
   <a style="background-color: rgba(255, 0, 0, 0.589); color: white; cursor: pointer;" class="nav-link"
     (click)="signOut()">
     
-    <p>Logout</p>
+    <p>déconnexion</p>
   </a>
   <p style="font-size: 0.6rem">&#169;Patarif - 2022</p>
 </div>
