--- a/src/app/admin-dashboard/admin-products/admin-products.component.html
+++ b/src/app/admin-dashboard/admin-products/admin-products.component.html
@@ -17,7 +17,7 @@
 
     <!-- Main Content -->
     <div class="col-11 main min-vh-100">
-      <h1>Products</h1>
+      <h1>Produits</h1>
       <div class="top-bar m-2 pb-1  row align-items-end justify-content-between gap-3">
         <div class="sort row align-items-center justify-content-start gap-3">
           <!-- <span> count <i class="bi bi-filter"></i></span> -->
@@ -27,7 +27,7 @@
           <h3><span>count </span> {{products.length}}</h3>
         </div>
 
-        <button (click)="openForm()" class="btn btn-outline-primary add col-auto">Add <span><i
+        <button (click)="openForm()" class="btn btn-outline-primary add col-auto">ajouter <span><i
               class="bi bi-plus-lg"></i></span></button>
       </div>
 
