--- a/src/app/components/pages/home/home-footer/home-footer.component.html
+++ b/src/app/components/pages/home/home-footer/home-footer.component.html
@@ -1,27 +1,27 @@
 <div class="footer-home" [style.background-color]="color">
     <!-- Logo Section -->
     <div class="logo-section">
-        <a routerLink="/home" class="logo" title="Go to main page">
+        <a routerLink="/home" class="logo" title="Aller à la page principale">
             <img src="images/logo-patarif.png" alt="logo">
         </a>
-        <p>&#169;Patarif Copyright - 2022 – All rights reserved</p>
+        <p>&#169;Patarif Copyright - 2022 – Tous droits réservés</p>
     </div>
 
     <!-- Links Section -->
     <div class="links-section">
         <div class="links">
-            <a class="link" routerLink="/home">Home</a>
-            <a class="link" routerLink="/learning">Learning Zone</a>
-            <a class="link" routerLink="/games">Playground</a>
-            <!-- <a class="link" routerLink="/games">Storytime</a> -->
-            <!-- <a class="link" routerLink="/home">Discovery Corner</a> -->
-            <a class="link" routerLink="/shop" title="hello">shop</a>
+            <a class="link" routerLink="/home">Accueil</a>
+            <a class="link" routerLink="/learning">Zone d’apprentissage</a>
+            <a class="link" routerLink="/games">Aire de jeux</a>
+            <!-- <a class="link" routerLink="/games">Heure des histoires</a> -->
+            <!-- <a class="link" routerLink="/home">Coin découverte</a> -->
+            <a class="link" routerLink="/shop" title="Boutique">Boutique</a>
         </div>
     </div>
 
     <!-- Social Section -->
     <div class="subscribe-section">
-        <h3 class="section-title">Follow Us</h3>
+        <h3 class="section-title">Suivez-nous</h3>
         <div class="social-media">
             <a class="social-link" href="https://www.instagram.com/patarif/" target="_blank" title="Instagram">
                 <i class="bi bi-instagram"></i>
