--- a/src/app/admin-dashboard/admin-products/product-form/product-form.component.html
+++ b/src/app/admin-dashboard/admin-products/product-form/product-form.component.html
@@ -155,11 +155,22 @@
 
             <!-- footer buttons -->
             <div class="form-footer d-flex justify-content-end gap-2 align-items-center p-footer">
-                <button type="button" class="btn btn-secondary" (click)="close()"><i class="bi bi-x-circle"></i>
-                    Discard</button>
-                <button type="submit" class="btn btn-primary btn-save"><i class="bi bi-check-lg"></i> Save
-                    Product</button>
+                <button type="button" class="btn btn-secondary" (click)="close()" [disabled]="isSaving">
+                    <i class="bi bi-x-circle"></i> Discard
+                </button>
+
+                <!-- زر الحفظ مع سبنر وتعطيل أثناء الحفظ -->
+                <button type="submit" class="btn btn-primary btn-save d-flex align-items-center" [disabled]="isSaving">
+                    <i class="bi bi-check-lg me-2" *ngIf="!isSaving"></i>
+
+                    <!-- spinner داخل الزر -->
+                    <span *ngIf="isSaving" class="spinner-border spinner-border-sm me-2" role="status"
+                        aria-hidden="true"></span>
+
+                    {{ isSaving ? 'Saving...' : 'Save Product' }}
+                </button>
             </div>
+
 
         </form>
 
