--- a/src/app/components/loading/loading.component.html
+++ b/src/app/components/loading/loading.component.html
@@ -1,6 +1,6 @@
-  <div  class="loading-overlay">
+<div class="loading-overlay">
     <div class="loading-box">
       <div class="spinner"></div>
-      <p>Loading products...</p>
+      <p>Chargement des produits...</p>
     </div>
-  </div>
+</div>
